[workspace]
members = [
    "mqtt-core",
    "mqtt-broker",
    "mqtt-client",
    "mqtt-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["RustMQ"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Zero-copy byte buffers
bytes = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Internal crates
mqtt-core = { path = "mqtt-core", version = "0.1.0" }
mqtt-client-rs = { path = "mqtt-client", version = "0.1.0" }
