[package]
name = "mqtt-broker"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
mqtt-core = { workspace = true }

