[package]
name = "mqtt-broker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "A premium MQTT 3.1.1 and 5.0 actor-based TCP broker"

[dependencies]
tokio = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
mqtt-core = { workspace = true }

