[package]
name = "mqtt-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "A command-line companion interface for the RustMQ broker"

[dependencies]
tokio = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
mqtt-core = { workspace = true }
mqtt-client = { workspace = true }
