[package]
name = "mqtt-client-rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "An async MQTT 3.1.1 and 5.0 client library"

[dependencies]
tokio = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
mqtt-core = { workspace = true }
